PSUPCLFRM-0000 update